--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ html {
 #slider {
     margin-top: 46.5px;
     padding-top: 50%;
-    background: url('/f8-html/TheBand_Website/assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    background: url('../img/slider/slider1.jpg') top center / cover no-repeat;
     position: relative;
 }
 
