--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -98,6 +98,10 @@
         color: #000;
         background: #ccc;
     }
+    .text-heading,
+    .text-description {
+        display: none;
+    }
     #content .content-section {
         padding: 200px 30px 200px;
     }
