--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -65,7 +65,7 @@
         width: 100%;
     }
     #nav>li:first-child {
-        width: 22%;
+        width: fit-content;
     }
     #nav>li {
         display: block;
@@ -75,7 +75,7 @@
     }
     #nav>li>a {
         display: flex;
-        height: 100%;
+        height: 94px;
         width: 100%;
         padding: 22px 34px;
         align-items: center;
